[package]
name = "gdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gdata"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
bigtools = "0.5.6"
itertools = "0.14"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["f16", "blosc", "blosc-zstd"] }
blosc-src = { version = "0.3.0", features = ["zstd"] }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10", features = ["static", "zlib", "threadsafe"] }
indicatif = "0.17"
log = "0.4"
pyo3-log = "0.12"
noodles = { version = "0.99.0", features = ["sam", "bam"] }
bed-utils = "0.9"
tokio = "1.34"
bstr = "1"
numcodecs-zfp = "0.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio-stream = "0.1"
tempfile = "3.20.0"

[dependencies.pyo3]
version = "0.24"
features = ["extension-module", "anyhow"]