[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "gdata"
requires-python = ">=3.9, <3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    'torch >= 2.1.0, < 2.3.0',
    'torchdata >= 0.7.1',
    'pyfaidx >= 0.8.1, < 0.9.0',
    'genomepy >= 0.16.1, < 0.17.0',
    'polars',
    'pyarrow',
]

[tool.maturin]
features = ["pyo3/extension-module"]
