[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "gdata._gdata"

[project]
name = "gdata"
requires-python = ">=3.9, <3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    'numpy',
    'pandas',
    'pyfaidx >= 0.8.1, < 0.9.0',
    'genomepy >= 0.16.1, < 0.17.0',
    'pybigtools',
]

[project.optional-dependencies]
torch = [
    'torch >= 2.5.0, < 2.8.0',
    'torchdata >= 0.11',
]